--- a/index.html
+++ b/index.html
@@ -1,2 +1,25 @@
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>Binary Search Trees</title>
+        <meta name = "author" content = "Cole Movsessian" />
+    </head>
+        <h1>Insertion</h1>
+        <ul>
+            <li id = "insertionElement">1) Compare to root node.</li>
+            <li id = "insertionElement">2) Traverse right if greater or left if less than.</li>
+            <li id = "insertionElement">3) Continue tree traversal until leaf node is found and insert as child.</li>
+            <img src = "insertionBST.png" width = "300" />
+        </ul>
+        <h1>Deletion</h1>
+        <ul>
+            <li class = "deletionClass">1) Find node.</li>
+            <li class = "deletionClass">2) Delete node.</li>
+            <li class = "deletionClass">3) Fix tree.</li>
+        <h2>Deletion Cases</h2>
+            <img src = "leafBST.png" width = "300" />
+            <img src = "oneChildBST.png" width = "300" />
+            <img src = "twoChildBST.png" width = "300" />
+        </ul>
+        <h3><a href="https://en.wikipedia.org/wiki/Red%E2%80%93black_tree">Next Topic: Red Black Trees</a></h3>
 </html>
