--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Binary Search Trees</title>
         <meta name = "author" content = "Cole Movsessian" />
+        <link rel = "stylesheet" href = style.css" />
     </head>
         <h1>Insertion</h1>
         <ul>
